--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 locale                   : "en-US"
 title                    : "Kate Sanders"
 title_separator          : "-"
-name                     : &name "Kate Sandres"
-description              : &description "Student at Hendrix College"
+name                     : &name "Kate Sanders"
+description              : &description "Kate Sanders"
 url                      : https://SandersKM.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "https://SandersKM.github.io" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "SandersKM/SandersKM.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -84,7 +84,7 @@ author:
   location         : "Conway, AR"
   employer         :
   googlescholar    : 
-  email            : "sanderskm 'at' hendrix.edu
+  email            : "sanderskm 'at' hendrix.edu"
   uri              :
   bitbucket        :
   codepen          :
