--- a/_config.yml
+++ b/_config.yml
@@ -78,13 +78,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kate Sandres"
+  name             : "Kate Sanders"
   avatar           : "profile.png"
   bio              : "Computer Science and Mathematics Student at Hendrix College"
   location         : "Conway, AR"
   employer         :
   googlescholar    : 
-  email            : "sanderskm 'at' hendrix.edu"
+  email            : "sanderskm@hendrix.edu"
   uri              :
   bitbucket        :
   codepen          :
