--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : 
 facebook:
   username               :
   app_id                 :
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Kate Sanders"
-  avatar           : "profile.png"
+  avatar           : "KateSanders.jpg"
   bio              : "Computer Science and Mathematics Student at Hendrix College"
   location         : "Conway, AR"
   employer         :
@@ -90,7 +90,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/kate.sanders.31105"
+  facebook         : "https://www.facebook.com/kate.sanders.31105?ref=br_tf"
   foursquare       :
   github           : "SandersKM"
   google_plus      :
