--- a/_config.yml
+++ b/_config.yml
@@ -90,14 +90,14 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/kate.sanders.31105?ref=br_tf"
+  facebook         : "kate.sanders.31105"
   foursquare       :
   github           : "SandersKM"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "sanderskm"
   orcid            : 
   pinterest        :
   soundcloud       :
