--- a/_config.yml
+++ b/_config.yml
@@ -176,7 +176,7 @@ collections:
     output: false
     permalink: /:collection/:path/
   portfolio:
-    output: true
+    output: false
     permalink: /:collection/:path/
   talks:
     output: false
